# barnsight-edge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/: config.py  main.py
src/core/: __init__.py  camera.py  stream_handler.py
src/core/camera/: stream_handler.py
src/frontend/: server.py  web_template.html
src/inference/: detector.py
